# trustyai-tests-poc

./: README.md  pyproject.toml
resources/: inference_service.py  serving_runtime.py  trustyai_service.py
resources/minio/: minio_secret.py
tests/: basic_test.py  conftest.py
utils/: constants.py  utils.py
